rutas aregladas | error route red

--- a/public/complements/styles/animations/intro.css
+++ b/public/complements/styles/animations/intro.css
@@ -8,17 +8,17 @@
 
 @font-face {
     font-family: "aero";
-    src: url("./fonts/aeroxys/Aeroxys.ttf") format("truetype");
+    src        : url("../fonts/aeroxys/Aeroxys.ttf") format("truetype");
   }
 
 @font-face {
     font-family: "schabo";
-    src: url("./fonts/schabo/SCHABO-Condensed.otf") format("truetype");
+    src: url("../fonts/schabo/SCHABO-Condensed.otf") format("truetype");
 }
 
 @font-face {
     font-family: "neue";
-    src: url("./fonts/neue/NeueMontreal-Regular.otf") format("truetype");
+    src: url("../fonts/neue/NeueMontreal-Regular.otf") format("truetype");
 }
 
 /* cursor styles */
