--- a/public/complements/styles/main/home/about.css
+++ b/public/complements/styles/main/home/about.css
@@ -1,7 +1,7 @@
 /* about section starts here */
 
 .about {
-    background-image : url("../images/blocks.jpg");
+    background-image : url("../../images/blocks.jpg");
     background-size  : cover;
     background-repeat: no-repeat;
 }
