--- a/public/complements/styles/main/home/home.css
+++ b/public/complements/styles/main/home/home.css
@@ -4,6 +4,11 @@
   background-image : url("../../images/circle.jpg");
   background-size  : cover;
   background-repeat: no-repeat;
+  transition: background-image 0.5s ease;    /* transición de la imagen de fondo */
+}
+
+.home.light-mode {
+  background-image: url("../../images/white.jpg");
 }
 
 .intro {
