--- a/public/complements/styles/main/home/start.css
+++ b/public/complements/styles/main/home/start.css
@@ -1,9 +1,11 @@
 :root {
-  --color-main : #d60b0b;
-  --color-black: #151414;
-  --color-dark : #0c0b0b;
-  --color-white: #f3f2f2;
-  --color-grey : #333;
+  --color-main     : #d60b0b;
+  --color-black    : #151414;
+  --color-semiblack: #202020;
+  --color-dark     : #0c0b0b;
+  --color-white    : #f3f2f2;
+  --color-grey     : #333;
+  --mode-light     : #FCFCFC;
 }
 
 @font-face {
@@ -41,13 +43,17 @@
 
 /* cursor styles */
 .cursor {
-  pointer-events: none;
-  position      : absolute;
-  padding       : 0.5vw;
-  border-radius : 50%;
-  z-index       : 9000;
-  transition    : transform 0.1s ease, width 0.3s ease, height 0.3s ease;
-  background    : var(--color-white);
+  pointer-events  : none;
+  position        : absolute;
+  padding         : 0.5vw;
+  border-radius   : 50%;
+  z-index         : 9000;
+  transition      : transform 0.1s ease, width 0.3s ease, height 0.3s ease, background-color 0.5s ease;
+  background-color: var(--color-white);
+}
+
+.light-mode .cursor {
+  background-color: var(--color-black);
 }
 
 /* line styles */
@@ -77,15 +83,14 @@ hr {
   right           : 20px;
   width           : 50px;
   height          : 50px;
-  background-color: #333;
-  color           : #fff;
+  background-color: #fff;
+  color           : #333;
   display         : flex;
   align-items     : center;
   justify-content : center;
   border-radius   : 50%;
   text-decoration : none;
-  box-shadow      : 0 2px 5px rgba(0, 0, 0, 0.3);
-  transition      : background-color 0.3s, box-shadow 0.3s, opacity 0.3s;
+  transition      : background-color 0.5s, opacity 0.5s;
   opacity         : 0;
   /* Oculta el botón inicialmente */
   pointer-events  : none;
@@ -93,15 +98,22 @@ hr {
   z-index         : 1000;
 }
 
+.light-mode .scroll-to-top {
+  background-color: #333;
+  color           : #fff;
+}
+
 /* scroll hover */
 .scroll-to-top:hover {
+  background-color: #cfcfcf;
+}
+
+.light-mode .scroll-to-top:hover {
   background-color: #555;
-  box-shadow      : 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 /* body styles */
 body {
-
   margin          : 0;
   padding         : 0;
   font-family     : "neue";
@@ -110,5 +122,10 @@ body {
   display         : flex;
   flex-direction  : column;
   height          : 100vh;
+  transition      : background-color 0.5s ease, color 0.5s ease;
+}
 
+body.light-mode {
+  background: var(--mode-light);
+  color     : var(--color-black);
 }
