--- a/public/complements/styles/main/home/about.css
+++ b/public/complements/styles/main/home/about.css
@@ -4,6 +4,11 @@
     background-image : url("../../images/blocks.jpg");
     background-size  : cover;
     background-repeat: no-repeat;
+    transition       : background-image 0.5s ease-in-out;
+}
+
+.light-mode .about {
+    background-image: url("../../images/whited.jpg");
 }
 
 .comments-section {
@@ -41,16 +46,21 @@
 }
 
 .comment-card {
-    position     : absolute;
-    background   : var(--color-black);
-    color        : var(--color-white);
-    border-radius: 8px;
-    padding      : 15px;
-    width        : 250px;
-    height       : 370px;
-    transition   : transform 0.2s ease-out, filter 0.2s ease-out;
-    will-change  : transform, filter;
-    filter       : blur(10px);
+    position        : absolute;
+    background-color: var(--color-black);
+    color           : var(--color-white);
+    border-radius   : 8px;
+    padding         : 15px;
+    width           : 250px;
+    height          : 370px;
+    transition      : transform 0.2s ease-out, filter 0.2s ease-out, background-color 0.5s ease-out, color 0.5s ease-out;
+    will-change     : transform, filter;
+    filter          : blur(10px);
+}
+
+.light-mode .comment-card {
+    background-color: var(--color-white);
+    color           : var(--color-black);
 }
 
 .comment-card:hover {
@@ -68,6 +78,10 @@
     font-size  : 1.5em;
     font-family: "neue";
     color      : #f3f2f2d0;
+}
+
+.light-mode .comment-content p {
+    color: #000000d0;
 }
 
 .comment-content h3 {
