--- a/public/complements/styles/main/home/faq.css
+++ b/public/complements/styles/main/home/faq.css
@@ -6,6 +6,12 @@
     padding         : 2rem;
     width           : 70%;
     margin          : 0 auto;
+    transition: background-color 0.5s;
+}
+
+.light-mode #faq {
+    background-color: var(--mode-light);
+    color           : var(--color-black);
 }
 
 .faq h2 {
