--- a/public/complements/styles/main/home/features.css
+++ b/public/complements/styles/main/home/features.css
@@ -9,6 +9,12 @@
     border-radius        : 10px;
     margin-top           : 10px;
     color                : var(--color-white);
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.light-mode .features-block {
+    background-color: var(--mode-light);
+    color           : var(--color-black);
 }
 
 .features-block h3 {
