--- a/public/complements/styles/main/home/start.css
+++ b/public/complements/styles/main/home/start.css
@@ -117,6 +117,43 @@ hr {
   background-color: #555;
 }
 
+.cookie-banner {
+  position        : fixed;
+  bottom          : 20px;
+  left            : 50%;
+  transform       : translateX(-50%);
+  background-color: var(--color-black);
+  color           : var(--color-white);
+  padding         : 15px 20px;
+  border-radius   : 15px;
+  box-shadow      : 0 4px 8px rgba(0, 0, 0, 0.2);
+  font-family     : "neue", sans-serif;
+  font-weight     : lighter;
+  font-size       : 19px;
+  display         : flex;
+  align-items     : center;
+  justify-content : center;
+  z-index         : 1000;
+}
+
+.cookie-banner p {
+  margin       : 0;
+  padding-right: 10px;
+}
+
+.cookie-banner a {
+  color          : var(--color-main);
+  font-weight    : bold;
+  text-decoration: none;
+  cursor         : pointer;
+  padding-left   : 5px;
+}
+
+.cookie-banner a:hover {
+  text-decoration: underline;
+}
+
+
 /* body styles */
 body {
   margin          : 0;
@@ -127,7 +164,7 @@ body {
   display         : flex;
   flex-direction  : column;
   height          : 100vh;
-  overflow-x: hidden;
+  overflow-x      : hidden;
   transition      : background-color 0.5s ease, color 0.5s ease;
 }
 
