--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -7,7 +7,7 @@
     --color-grey     : #535151;
     --color-semigrey : #565555;
     --mode-light     : #FCFCFC;
-  }
+}
 
 /* fonts select */
 @font-face {
@@ -30,21 +30,32 @@
     src        : url("../../fonts/neue/NeueMontreal-Medium.otf") format("truetype");
 }
 
+* {
+    padding    : 0;
+    margin     : 0;
+    box-sizing : border-box;
+    font-family: 'neue', sans-serif;
+}
+
 body {
-    font-family      : "nevol";
-    margin           : 0;
-    padding          : 0;
-    box-sizing       : border-box;
+    font-family: "neue";
+    margin     : 0;
+    padding    : 0;
+    box-sizing : border-box;
+    color      : var(--color-white);
+    width      : 100%;
+}
+
+.dashboard {
     background-image : url("../../images/linnes.jpg");
     background-size  : cover;
     background-repeat: no-repeat;
-    color            : var(--color-white);
-    width            : 100%;
-    overflow-x: hidden;
-
+    transition       : background-image 0.5s ease;
 }
 
-
+.dashboard.light-mode {
+    background-image: url("../../images/mici.jpg");
+}
 
 /* cursor styles */
 .cursor {
