--- a/public/complements/styles/secondary/form/user.css
+++ b/public/complements/styles/secondary/form/user.css
@@ -135,7 +135,7 @@ body {
   width       : 33%;
   position    : relative;
   border-right: 2px solid var(--color-grey);
-  transition: boder-right 0.5s ease;
+  transition  : boder-right 0.5s ease;
 }
 
 .light-mode .left-section {
@@ -143,10 +143,11 @@ body {
 }
 
 .left-section img {
-  width     : 100%;
-  height    : 100%;
-  object-fit: cover;
-  display   : block;
+  width         : 100%;
+  height        : 100%;
+  object-fit    : cover;
+  display       : block;
+  pointer-events: none;
 }
 
 
