--- a/public/complements/styles/secondary/form/user.css
+++ b/public/complements/styles/secondary/form/user.css
@@ -114,6 +114,48 @@
   border          : 1px solid #c3e6cb;
 }
 
+    /* Popup de Requisitos de Contraseña */
+    .password-popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 87%;
+      transform: translate(-50%, -50%);
+      padding: 30px;
+      background-color: var(--color-black);
+      border: 1px solid var(--color-grey);
+      border-radius: 5px;
+      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+      z-index: 1001;
+      width: 300px;
+      transition: background-color 0.5s ease, border 0.5s ease, box-shadow 0.5s ease;
+  }
+
+  .light-mode .password-popup {
+      background-color: var(--mode-light);
+      border: 1px solid var(--color-white);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .password-popup.active {
+      display: block;
+  }
+
+  .password-popup p {
+      margin: 0;
+      color: var(--color-white);
+      font-family: "neue";
+      font-size: 1.3em;
+  }
+
+  .password-popup p span {
+      color: var(--color-main);
+  }
+
+  .light-mode .password-popup p {
+      color: var(--color-dark);
+  }
+
 body {
   min-height      : 100vh;
   width           : 100%;
