--- a/public/complements/styles/main/home/faq.css
+++ b/public/complements/styles/main/home/faq.css
@@ -6,7 +6,7 @@
     padding         : 2rem;
     width           : 70%;
     margin          : 0 auto;
-    transition: background-color 0.5s;
+    transition      : background-color 0.5s;
 }
 
 .light-mode #faq {
@@ -20,11 +20,11 @@
     text-align   : center;
     font-family  : "neue";
     font-weight  : lighter;
-    color        : #bb0f0f;
+    color        : var(--color-secondary);
 }
 
 .faq-item {
-    border-bottom : 1px solid #454545;
+    border-bottom : 1px solid var(--color-grey);
     margin-bottom : 1rem;
     padding-bottom: 1rem;
 }
@@ -69,7 +69,7 @@
     font-family: "neue";
     font-weight: lighter;
     font-size  : 1.5em;
-    color      : #575757;
+    color      : var(--color-semigrey);
 }
 
 /* faq section ends here */
