--- a/public/complements/styles/secondary/form/start.css
+++ b/public/complements/styles/secondary/form/start.css
@@ -118,7 +118,7 @@
     border          : 1px solid #c3e6cb;
 }
 
-/* Popup password styles */
+/* Password popup styles */
 
 .password-popup {
     display         : none;
